tests/ui/rfcs/rfc-2632-const-trait-impl/const-drop-fail-2.stderr
error: ~const can only be applied to `#[const_trait]` traits
  --> $DIR/const-drop-fail-2.rs:21:26
   |
LL | const fn check<T: ~const Destruct>(_: T) {}
   |                          ^^^^^^^^

error: aborting due to previous error

